--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-lerna-debug.log*
 
 # Dependencies
 node_modules
@@ -20,3 +19,6 @@ node_modules
 
 # next
 .next
+
+next-env.d.ts
+yarn.lock
