--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@mui/material": "^5.0.3",
+    "@mui/styles": "^5.0.1",
     "next": "11.1.2",
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-redux": "^7.2.5"
+    "react-redux": "^7.2.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.29",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "typescript": "^4.4.4",
     "webpack": "^5.58.2"
   }
