--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.29",
+    "@types/react-redux": "^7.1.19",
     "eslint-plugin-react-hooks": "^4.2.0",
     "typescript": "^4.4.4",
     "webpack": "^5.58.2"
