--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "noImplicitAny": true,
-    "noImplicitThis": true,
-    "strictNullChecks": true
+    "noImplicitThis": true
   },
   "include": [
     "next-env.d.ts",
