--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
   "devDependencies": {
     "@types/react": "^17.0.29",
     "@types/react-redux": "^7.1.19",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.4.1",
     "typescript": "^4.4.4",
     "webpack": "^5.58.2"
   }
