--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@mui/icons-material": "^5.0.4",
     "@mui/material": "^5.0.3",
     "@mui/styles": "^5.0.1",
-    "next": "11.1.2",
+    "next": "12.0.7",
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -22,6 +22,7 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^3.1.1",
     "@types/react": "^17.0.29",
     "@types/react-redux": "^7.1.19",
     "eslint": "^8.0.1",
