--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@mui/lab": "^5.0.0-alpha.62",
     "@mui/material": "^5.2.6",
     "@mui/styles": "^5.0.1",
+    "@reduxjs/toolkit": "^1.7.2",
     "@types/react-beautiful-dnd": "^13.1.2",
+    "axios": "^0.26.0",
     "next": "12.0.7",
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
