--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@reduxjs/toolkit": "^1.7.2",
     "@types/react-beautiful-dnd": "^13.1.2",
     "axios": "^0.26.0",
-    "next": "12.0.7",
+    "eslint-plugin-react": "^7.29.4",
+    "next": "^12.1.4",
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
@@ -33,8 +34,13 @@
     "@trivago/prettier-plugin-sort-imports": "^3.1.1",
     "@types/react": "^17.0.29",
     "@types/react-redux": "^7.1.19",
-    "eslint": "^8.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.4.1",
     "typescript": "^4.4.4",
